cc/tests/fixtures/positive/20-pp-conditional.c
#if 1
int c = 5;
#elif 0
int c = 6;
#else
int c = 7;
#endif
