cc/tests/fixtures/negative/08-pp-malformed-ifdef.c
#ifdef
int bad3 = 0;
